--- a/modelling code.ipynb
+++ b/modelling code.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -180,7 +180,7 @@
        "4         79084.10       0  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -347,7 +347,7 @@
        "4       0  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -358,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -505,7 +505,7 @@
        "9999       0  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -516,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -525,7 +525,7 @@
        "(10000, 13)"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -536,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -558,7 +558,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -578,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -614,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -791,7 +791,7 @@
        "max        1.000000  "
       ]
      },
-     "execution_count": 27,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -802,7 +802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -949,7 +949,7 @@
        "4       0  "
       ]
      },
-     "execution_count": 28,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -960,7 +960,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -970,7 +970,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1098,7 +1098,7 @@
        "4          1               1         79084.10       0  "
       ]
      },
-     "execution_count": 30,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1109,7 +1109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1122,7 +1122,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1133,7 +1133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1145,7 +1145,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1156,7 +1156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1166,7 +1166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1307,7 +1307,7 @@
        "4             True        False  "
       ]
      },
-     "execution_count": 36,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1318,7 +1318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1330,7 +1330,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1341,7 +1341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1351,7 +1351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1400,7 +1400,7 @@
        "1       1   2037"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1411,7 +1411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -2385,7 +2385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2395,7 +2395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -2530,7 +2530,7 @@
        "4        False  "
       ]
      },
-     "execution_count": 47,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2541,7 +2541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -2555,7 +2555,7 @@
        "Name: Exited, dtype: int64"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2566,7 +2566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2583,7 +2583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -2591,46 +2591,11 @@
      "output_type": "stream",
      "text": [
       "Defaulting to user installation because normal site-packages is not writeable\n",
-      "Collecting scikit-learn\n",
-      "  Downloading scikit_learn-1.5.0-cp312-cp312-win_amd64.whl.metadata (11 kB)\n",
+      "Requirement already satisfied: scikit-learn in c:\\users\\abhis\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.12_qbz5n2kfra8p0\\localcache\\local-packages\\python312\\site-packages (1.5.0)\n",
       "Requirement already satisfied: numpy>=1.19.5 in c:\\users\\abhis\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.12_qbz5n2kfra8p0\\localcache\\local-packages\\python312\\site-packages (from scikit-learn) (1.26.4)\n",
       "Requirement already satisfied: scipy>=1.6.0 in c:\\users\\abhis\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.12_qbz5n2kfra8p0\\localcache\\local-packages\\python312\\site-packages (from scikit-learn) (1.14.0)\n",
-      "Collecting joblib>=1.2.0 (from scikit-learn)\n",
-      "  Downloading joblib-1.4.2-py3-none-any.whl.metadata (5.4 kB)\n",
-      "Collecting threadpoolctl>=3.1.0 (from scikit-learn)\n",
-      "  Downloading threadpoolctl-3.5.0-py3-none-any.whl.metadata (13 kB)\n",
-      "Downloading scikit_learn-1.5.0-cp312-cp312-win_amd64.whl (10.9 MB)\n",
-      "   ---------------------------------------- 0.0/10.9 MB ? eta -:--:--\n",
-      "   - -------------------------------------- 0.3/10.9 MB 5.7 MB/s eta 0:00:02\n",
-      "   -- ------------------------------------- 0.8/10.9 MB 8.4 MB/s eta 0:00:02\n",
-      "   ---- ----------------------------------- 1.3/10.9 MB 9.4 MB/s eta 0:00:02\n",
-      "   ------ --------------------------------- 1.9/10.9 MB 10.0 MB/s eta 0:00:01\n",
-      "   --------- ------------------------------ 2.5/10.9 MB 10.5 MB/s eta 0:00:01\n",
-      "   ---------- ----------------------------- 2.9/10.9 MB 10.5 MB/s eta 0:00:01\n",
-      "   ------------ --------------------------- 3.5/10.9 MB 10.5 MB/s eta 0:00:01\n",
-      "   -------------- ------------------------- 3.9/10.9 MB 10.5 MB/s eta 0:00:01\n",
-      "   ---------------- ----------------------- 4.5/10.9 MB 10.6 MB/s eta 0:00:01\n",
-      "   ------------------ --------------------- 5.0/10.9 MB 10.7 MB/s eta 0:00:01\n",
-      "   -------------------- ------------------- 5.5/10.9 MB 11.0 MB/s eta 0:00:01\n",
-      "   --------------------- ------------------ 5.9/10.9 MB 10.7 MB/s eta 0:00:01\n",
-      "   ---------------------- ----------------- 6.2/10.9 MB 10.4 MB/s eta 0:00:01\n",
-      "   ------------------------ --------------- 6.7/10.9 MB 10.4 MB/s eta 0:00:01\n",
-      "   -------------------------- ------------- 7.2/10.9 MB 10.4 MB/s eta 0:00:01\n",
-      "   ---------------------------- ----------- 7.7/10.9 MB 10.5 MB/s eta 0:00:01\n",
-      "   ------------------------------ --------- 8.2/10.9 MB 10.5 MB/s eta 0:00:01\n",
-      "   ------------------------------- -------- 8.7/10.9 MB 10.5 MB/s eta 0:00:01\n",
-      "   --------------------------------- ------ 9.3/10.9 MB 10.6 MB/s eta 0:00:01\n",
-      "   ----------------------------------- ---- 9.8/10.9 MB 10.6 MB/s eta 0:00:01\n",
-      "   ------------------------------------- -- 10.3/10.9 MB 10.7 MB/s eta 0:00:01\n",
-      "   ---------------------------------------  10.8/10.9 MB 10.7 MB/s eta 0:00:01\n",
-      "   ---------------------------------------  10.9/10.9 MB 10.7 MB/s eta 0:00:01\n",
-      "   ---------------------------------------- 10.9/10.9 MB 10.4 MB/s eta 0:00:00\n",
-      "Downloading joblib-1.4.2-py3-none-any.whl (301 kB)\n",
-      "   ---------------------------------------- 0.0/301.8 kB ? eta -:--:--\n",
-      "   ---------------------------------------- 301.8/301.8 kB 9.4 MB/s eta 0:00:00\n",
-      "Downloading threadpoolctl-3.5.0-py3-none-any.whl (18 kB)\n",
-      "Installing collected packages: threadpoolctl, joblib, scikit-learn\n",
-      "Successfully installed joblib-1.4.2 scikit-learn-1.5.0 threadpoolctl-3.5.0\n",
+      "Requirement already satisfied: joblib>=1.2.0 in c:\\users\\abhis\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.12_qbz5n2kfra8p0\\localcache\\local-packages\\python312\\site-packages (from scikit-learn) (1.4.2)\n",
+      "Requirement already satisfied: threadpoolctl>=3.1.0 in c:\\users\\abhis\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.12_qbz5n2kfra8p0\\localcache\\local-packages\\python312\\site-packages (from scikit-learn) (3.5.0)\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
@@ -2641,7 +2606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2650,7 +2615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2666,7 +2631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2675,7 +2640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2684,7 +2649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2694,7 +2659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -2715,7 +2680,7 @@
        "         1.73089688,  0.90750738]])"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2733,7 +2698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2742,7 +2707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2751,7 +2716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -3167,7 +3132,7 @@
        "LogisticRegression()"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3178,7 +3143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3187,7 +3152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3196,7 +3161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -3205,7 +3170,7 @@
        "0.808"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3216,7 +3181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3225,7 +3190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -3234,7 +3199,7 @@
        "0.5891472868217055"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3245,7 +3210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -3254,7 +3219,7 @@
        "0.18673218673218672"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3265,7 +3230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -3274,7 +3239,7 @@
        "0.2835820895522388"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3285,7 +3250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3303,12 +3268,81 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Using SVC"
+    "### becasue the data is highly imbalanced we will handle it with SMOTE\n",
+    "Smote stands for Synthetic Minority over sampling technique"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 45,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Defaulting to user installation because normal site-packages is not writeable\n",
+      "Requirement already satisfied: imblearn in c:\\users\\abhis\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.12_qbz5n2kfra8p0\\localcache\\local-packages\\python312\\site-packages (0.0)\n",
+      "Requirement already satisfied: imbalanced-learn in c:\\users\\abhis\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.12_qbz5n2kfra8p0\\localcache\\local-packages\\python312\\site-packages (from imblearn) (0.12.3)\n",
+      "Requirement already satisfied: numpy>=1.17.3 in c:\\users\\abhis\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.12_qbz5n2kfra8p0\\localcache\\local-packages\\python312\\site-packages (from imbalanced-learn->imblearn) (1.26.4)\n",
+      "Requirement already satisfied: scipy>=1.5.0 in c:\\users\\abhis\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.12_qbz5n2kfra8p0\\localcache\\local-packages\\python312\\site-packages (from imbalanced-learn->imblearn) (1.14.0)\n",
+      "Requirement already satisfied: scikit-learn>=1.0.2 in c:\\users\\abhis\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.12_qbz5n2kfra8p0\\localcache\\local-packages\\python312\\site-packages (from imbalanced-learn->imblearn) (1.5.0)\n",
+      "Requirement already satisfied: joblib>=1.1.1 in c:\\users\\abhis\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.12_qbz5n2kfra8p0\\localcache\\local-packages\\python312\\site-packages (from imbalanced-learn->imblearn) (1.4.2)\n",
+      "Requirement already satisfied: threadpoolctl>=2.0.0 in c:\\users\\abhis\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.12_qbz5n2kfra8p0\\localcache\\local-packages\\python312\\site-packages (from imbalanced-learn->imblearn) (3.5.0)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "pip install imblearn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from imblearn.over_sampling import SMOTE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x_res, y_res = SMOTE().fit_resample(x,y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Exited\n",
+       "1    7963\n",
+       "0    7963\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_res.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
